[tool.poetry]
name = "parser-actions"
version = "0.0.0"
description = "Additional actions for argparse."
authors = ["Alma <program@alma-field.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
disallow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_globals = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
